welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:22: error: not found: type Couleur
def faireV(c:Couleur){
             ^MethodsPicture:63: error: not found: type Couleur
def faireV(c:Couleur){
             ^